--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -27,10 +27,9 @@ jobs:
         run: |
           cd frontend
           npx webpack --mode=production --config webpack.config.js
-        continue-on-error: false
 
       - name: Upload Frontend Artifact
-        uses: actions/upload-artifact@v4.6.2
+        uses: actions/upload-artifact@v3
         with:
           name: frontend-bundle
           path: frontend/dist/kubestellar-cluster-plugin-frontend.js
@@ -51,13 +50,16 @@ jobs:
         with:
           go-version: 1.21
 
+      - name: Install build dependencies (for cgo)
+        run: sudo apt-get update && sudo apt-get install -y build-essential
+
       - name: Build Backend Plugin for linux-${{ matrix.goarch }}
         run: |
           cd backend
-          GOOS=linux GOARCH=${{ matrix.goarch }} go build -buildmode=plugin -o kubestellar-cluster-plugin-linux-${{ matrix.goarch }}.so main.go
+          CGO_ENABLED=1 GOOS=linux GOARCH=${{ matrix.goarch }} go build -buildmode=plugin -o kubestellar-cluster-plugin-linux-${{ matrix.goarch }}.so main.go
 
       - name: Upload Backend Plugin for linux-${{ matrix.goarch }}
-        uses: actions/upload-artifact@v4.6.2
+        uses: actions/upload-artifact@v3
         with:
           name: backend-plugin-linux-${{ matrix.goarch }}
           path: backend/kubestellar-cluster-plugin-linux-${{ matrix.goarch }}.so
@@ -73,17 +75,17 @@ jobs:
           ref: main
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Releases Folder if Not Exists
+      - name: Create Releases Folder
         run: mkdir -p releases
 
       - name: Download Frontend Artifact
-        uses: actions/download-artifact@v4.6.2
+        uses: actions/download-artifact@v3
         with:
           name: frontend-bundle
           path: releases/
 
       - name: Download Backend Plugins
-        uses: actions/download-artifact@v4.6.2
+        uses: actions/download-artifact@v3
         with:
           path: releases/
 
