--- a/.github/workflows/plugin.yaml
+++ b/.github/workflows/plugin.yaml
@@ -40,7 +40,7 @@ jobs:
     needs: build_frontend
     strategy:
       matrix:
-        goarch: [amd64, arm64]
+        goarch: [amd64]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
